[Viky] Fix for show more height bug in archive section

--- a/content/static/css/_archive.scss
+++ b/content/static/css/_archive.scss
@@ -114,12 +114,12 @@
               font-style: italic;
               text-align: justify;
               padding: 0 0 10px 0;
-              height: 160px;
+              max-height: 150px;
               overflow: hidden;
               transition: height .5s;
             }
             .show {
-                height: auto;
+                max-height: 1000px;
                 transition: height .5s;
               }
             .name {
