[Viky] Added margin for the about secion

--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -394,7 +394,7 @@ html {
       display: block; }
 
 #about {
-  padding-top: 40px;
+  margin-top: 40px;
   background-color: #dfdfdf; }
   #about p {
     padding: 20px 0;
