[Viky] Fix for speaker img

--- a/content/static/css/_agenda.scss
+++ b/content/static/css/_agenda.scss
@@ -51,7 +51,7 @@
             border-radius: 32px;
             width: 32px;
             height: 32px;
-            padding: 5px 5px 5px 0;
+            margin: 5px 5px 5px 0;
           }
 
           .title {
