--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -20,3 +20,6 @@ $geeknight-logo: url("../img/geek_night_logo.svg");
 $direction-img: url("../img/direction.svg");
 $intro-background: url("../img/intro_background.jpg");
 $youtube-logo: url("../img/youtube-logo.svg");
+
+
+$desktop-min-width: 1024px;
