--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,13 +1,8 @@
 html {
-  width: 100%;
-  height: 100%;
-  min-width: 924px;
-  overflow: auto;
   font-family: 'OpenSans', sans-serif; }
   html body {
     position: relative;
-    margin: auto;
-    min-width: 924px; }
+    margin: auto; }
     html body a {
       color: #ef5ba1;
       text-decoration: none; }
@@ -27,6 +22,14 @@ html {
   html .link {
     text-decoration: underline; }
 
+@media only screen and (min-width: 1024px) {
+  html {
+    width: 100%;
+    height: 100%;
+    min-width: 924px;
+    overflow: auto; }
+    html body {
+      min-width: 924px; } }
 .header {
   background: rgba(255, 255, 255, 0.9);
   position: fixed;
@@ -44,7 +47,6 @@ html {
     -moz-transition: left .5s ease;
     transition: left .5s ease; }
   .header .nav-bar {
-    width: 960px;
     display: flex;
     position: relative;
     top: 15px;
@@ -72,6 +74,51 @@ html {
 .shadow {
   box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.2); }
 
+@media only screen and (min-width: 1024px) {
+  .header {
+    background: rgba(255, 255, 255, 0.9);
+    position: fixed;
+    height: 100px;
+    width: 100%;
+    z-index: 999;
+    padding: 0;
+    top: 0;
+    left: 0;
+    right: 0; }
+    .header a {
+      text-decoration: none;
+      color: #ef5ba1;
+      -webkit-transition: left .5s ease;
+      -moz-transition: left .5s ease;
+      transition: left .5s ease; }
+    .header .nav-bar {
+      width: 960px;
+      display: flex;
+      position: relative;
+      top: 15px;
+      bottom: 15px;
+      margin: auto; }
+      .header .nav-bar .logo-section {
+        display: flex;
+        flex: 1 1 50%; }
+        .header .nav-bar .logo-section .logo {
+          background: url("../img/geek_night_logo.svg") no-repeat;
+          background-size: 140px;
+          height: 65px;
+          width: 160px;
+          margin-left: 5px; }
+      .header .nav-bar .menu {
+        display: flex;
+        align-items: center;
+        flex: 1 1 40%; }
+        .header .nav-bar .menu-item {
+          flex: 1 1 25%; }
+        .header .nav-bar .menu .active a {
+          border-bottom: 5px solid #ef5ba1;
+          padding-bottom: 5px; }
+
+  .shadow {
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.2); } }
 .intro {
   position: relative;
   display: flex;
@@ -86,7 +133,6 @@ html {
     .intro .banner-overlay {
       margin: auto;
       height: 360px;
-      width: 620px;
       position: absolute;
       top: 100px;
       bottom: 0;
@@ -165,6 +211,99 @@ html {
     border-top: 1px solid;
     margin: 0 50px; }
 
+@media only screen and (min-width: 1024px) {
+  .intro {
+    position: relative;
+    display: flex;
+    flex-flow: column;
+    min-height: 500px;
+    text-align: center;
+    padding-top: 100px; }
+    .intro .banner {
+      flex: 1 1 60%;
+      background: url("../img/intro_background.jpg") center center no-repeat;
+      background-size: 100%; }
+      .intro .banner-overlay {
+        margin: auto;
+        height: 360px;
+        width: 620px;
+        position: absolute;
+        top: 100px;
+        bottom: 0;
+        right: 0;
+        left: 0; }
+      .intro .banner .mask {
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        position: absolute;
+        overflow: hidden; }
+        .intro .banner .mask .blur {
+          position: absolute;
+          background-color: rgba(255, 255, 255, 0.8);
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          filter: blur(2px); }
+    .intro-info {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 0; }
+      .intro-info-place-title {
+        font-size: 33px;
+        font-weight: 800;
+        margin: 0 70px;
+        padding-top: 20px; }
+      .intro-info-edition {
+        padding-top: 15px;
+        font-size: 18px;
+        font-weight: bold; }
+        .intro-info-edition sup {
+          font-size: 14px; }
+      .intro-info-date {
+        font-size: 24px;
+        font-weight: bold;
+        padding-bottom: 20px; }
+        .intro-info-date sup {
+          font-size: 18px; }
+      .intro-info-buttons {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center; }
+        .intro-info-buttons-button {
+          border-radius: 4px;
+          border: 1px solid transparent;
+          width: 220px;
+          cursor: pointer;
+          padding: 0 20px 20px 20px; }
+          .intro-info-buttons-button-text {
+            height: 60px;
+            font-size: 24px;
+            font-weight: bold;
+            line-height: 60px;
+            border-radius: 4px;
+            background-color: #1a73ba;
+            color: #fff; }
+          .intro-info-buttons-button-sub-text {
+            color: #000;
+            font-style: italic;
+            font-size: 14px;
+            padding: 5px; }
+      .intro-info-subnote {
+        display: flex;
+        justify-content: center;
+        padding: 20px; }
+        .intro-info-subnote .youtube {
+          background: url("../img/youtube-logo.svg") center no-repeat;
+          background-size: 70px;
+          flex: 0 1 15%; }
+    .intro .line {
+      border-top: 1px solid;
+      margin: 0 50px; } }
 .agenda-heading {
   height: 90px;
   line-height: 90px;
@@ -177,9 +316,7 @@ html {
 .agenda .content {
   margin: 0 0 50px 0; }
   .agenda .content .speakers {
-    margin: 0px auto;
-    min-width: 768px;
-    width: 768px; }
+    margin: 0px auto; }
     .agenda .content .speakers:first-child {
       border-top: none; }
     .agenda .content .speakers:last-child {
@@ -227,6 +364,64 @@ html {
           align-items: center;
           justify-content: flex-start; }
 
+@media only screen and (min-width: 1024px) {
+  .agenda-heading {
+    height: 90px;
+    line-height: 90px;
+    text-align: center; }
+    .agenda-heading-text {
+      font-size: 36px;
+      font-weight: 800;
+      color: #000;
+      text-transform: uppercase; }
+  .agenda .content {
+    margin: 0 0 50px 0; }
+    .agenda .content .speakers {
+      margin: 0px auto;
+      min-width: 768px;
+      width: 768px; }
+      .agenda .content .speakers:first-child {
+        border-top: none; }
+      .agenda .content .speakers:last-child {
+        border-bottom: 1px solid #000; }
+      .agenda .content .speakers .speaker-details {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        border-top: 1px solid #000;
+        padding: 10px 0; }
+        .agenda .content .speakers .speaker-details .time {
+          flex: 1 1 10%;
+          align-self: flex-start;
+          padding-top: 5px;
+          font-weight: 800;
+          text-transform: uppercase; }
+        .agenda .content .speakers .speaker-details .speaker-detail {
+          flex: 1 1 85%; }
+          .agenda .content .speakers .speaker-details .speaker-detail .img {
+            border-radius: 32px;
+            width: 32px;
+            height: 32px;
+            margin: 5px 5px 5px 0; }
+          .agenda .content .speakers .speaker-details .speaker-detail .title {
+            font-size: 20px;
+            font-weight: bold;
+            display: block; }
+          .agenda .content .speakers .speaker-details .speaker-detail .title-default {
+            font-size: 20px;
+            font-weight: bold; }
+          .agenda .content .speakers .speaker-details .speaker-detail .subtitle {
+            display: block;
+            font-size: 15px;
+            font-style: italic;
+            text-align: justify;
+            padding: 0 0 10px 0; }
+          .agenda .content .speakers .speaker-details .speaker-detail .name {
+            font-size: 15px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start; } }
 .location {
   position: relative;
   mix-width: 1024px;
@@ -288,7 +483,6 @@ html {
   display: flex;
   margin: auto;
   align-content: center;
-  width: 800px;
   background-color: #ededed; }
   .archive .previous-editions .events {
     display: flex;
@@ -388,6 +582,119 @@ html {
     .archive .previous-editions .content .speakers.active {
       display: block; }
 
+@media only screen and (min-width: 1024px) {
+  .archive-heading {
+    height: 90px;
+    line-height: 90px;
+    text-align: center; }
+    .archive-heading-text {
+      font-size: 36px;
+      font-weight: 800;
+      color: #000;
+      text-transform: uppercase; }
+  .archive .previous-editions {
+    display: flex;
+    margin: auto;
+    align-content: center;
+    width: 800px;
+    background-color: #ededed; }
+    .archive .previous-editions .events {
+      display: flex;
+      flex-flow: row nowrap;
+      text-align: center;
+      flex: 1 1 25%; }
+      .archive .previous-editions .events .years {
+        flex: 1 1 10%;
+        font-weight: 800;
+        font-size: 15px;
+        background-color: #f5f5f5; }
+        .archive .previous-editions .events .years .year {
+          padding: 0px 0 10px 0;
+          height: 20px;
+          padding: 20px;
+          cursor: pointer; }
+        .archive .previous-editions .events .years .year.active {
+          background-color: rgba(255, 255, 255, 0.8); }
+      .archive .previous-editions .events .months {
+        flex: 1 1 10%;
+        font-weight: bold;
+        font-size: 15px;
+        background-color: #f1f1f1; }
+        .archive .previous-editions .events .months .event {
+          padding: 0px 0 10px 0;
+          height: 20px;
+          padding: 20px;
+          display: none;
+          cursor: pointer; }
+        .archive .previous-editions .events .months .event.active {
+          background-color: rgba(255, 255, 255, 0.8); }
+        .archive .previous-editions .events .months .event.show {
+          display: block; }
+    .archive .previous-editions .content {
+      flex: 1 1 75%; }
+      .archive .previous-editions .content .speakers {
+        display: none;
+        padding: 20px;
+        background-color: #ededed; }
+        .archive .previous-editions .content .speakers .edition {
+          padding-top: 15px;
+          font-size: 24px;
+          font-weight: bold;
+          text-align: center; }
+          .archive .previous-editions .content .speakers .edition sup {
+            font-size: 18px; }
+        .archive .previous-editions .content .speakers .speaker-details {
+          display: flex;
+          border-top: 1px solid #000;
+          padding: 10px 0; }
+          .archive .previous-editions .content .speakers .speaker-details:nth-child(2) {
+            border-top: none; }
+          .archive .previous-editions .content .speakers .speaker-details:last-child {
+            padding-bottom: 25px; }
+          .archive .previous-editions .content .speakers .speaker-details .time {
+            flex: 1 1 10%;
+            align-self: flex-start;
+            padding-top: 5px;
+            font-weight: 800;
+            text-transform: uppercase; }
+          .archive .previous-editions .content .speakers .speaker-details .speaker-detail {
+            flex: 1 1 85%; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .img {
+              border-radius: 32px;
+              width: 32px;
+              height: 32px;
+              margin: 5px 5px 5px 0; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .title {
+              color: #ef5ba1;
+              font-size: 20px;
+              font-weight: bold;
+              display: block; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .title-default {
+              color: #000;
+              font-size: 20px;
+              font-weight: bold; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .subtitle {
+              display: block;
+              color: #4a4a4a;
+              font-size: 15px;
+              font-style: italic;
+              text-align: justify;
+              padding: 0 0 10px 0;
+              max-height: 150px;
+              overflow: hidden;
+              transition: height .5s; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .show {
+              max-height: 1000px;
+              transition: height .5s; }
+            .archive .previous-editions .content .speakers .speaker-details .speaker-detail .name {
+              color: #ef5ba1;
+              font-size: 15px;
+              font-weight: bold;
+              display: flex;
+              align-items: center;
+              justify-content: flex-start; }
+      .archive .previous-editions .content .speakers.active {
+        display: block; } }
 #about {
   margin-top: 40px;
   background-color: #dfdfdf; }
