--- a/content/static/css/_common.scss
+++ b/content/static/css/_common.scss
@@ -1,14 +1,9 @@
 html {
-  width: 100%;
-  height: 100%;
-  min-width: 924px;
-  overflow: auto;
   font-family: 'OpenSans', sans-serif;
 
   body {
     position: relative;
     margin: auto;
-    min-width: 924px;
 
     a {
       color: $pink;
@@ -42,4 +37,17 @@ html {
     text-decoration: underline;
   }
 
+}
+
+@media only screen and (min-width: $desktop-min-width) {
+  html {
+    width: 100%;
+    height: 100%;
+    min-width: 924px;
+    overflow: auto;
+
+    body {
+      min-width: 924px;
+    }
+  }
 }
