[Viky] Added break points for desktop and mobile

--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -20,3 +20,7 @@ $geeknight-logo: url("../img/geek_night_logo.svg");
 $direction-img: url("../img/direction.svg");
 $intro-background: url("../img/intro_background.jpg");
 $youtube-logo: url("../img/youtube-logo.svg");
+
+//BreakPoints
+$mobile: "only screen and (min-device-width: 320px) and (max-device-width: 480px)";
+$desktop: "only screen and (min-width : 1224px)";
