[Viky] Fixed Typo for desktop breakpoint

--- a/content/static/css/_variables.scss
+++ b/content/static/css/_variables.scss
@@ -23,4 +23,4 @@ $youtube-logo: url("../img/youtube-logo.svg");
 
 //BreakPoints
 $mobile: "only screen and (min-device-width: 320px) and (max-device-width: 480px)";
-$mobile: "only screen and (min-width : 1224px)";
+$desktop: "only screen and (min-width : 1224px)";
